--- a/index.html
+++ b/index.html
@@ -6,13 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Fear of 13</title>
     <style>
-      html, body, canvas, button, nav {
+      html, body, canvas {
         margin: 0;
         padding: 0;
         border: 0;
-      }
-
-      html, body, body > canvas {
         width: 100%;
         height: 100%;
         overflow: hidden;
@@ -20,47 +17,24 @@
 
       canvas {
         image-rendering: pixelated;
+        background-color: #fff;
       }
 
-      nav {
-        position: fixed;
-        bottom: 0;
-        left: 0;
-        width: 100%;
-        height: 100px;
+      div {
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        min-height: 100vh;
         background-color: #000;
-      }
-
-      nav button {
-        display: inline-block;
-        font-size: 40px;
-        font-weight: 400;
-        width: 100%;
-        background-color: #000;
-        color: #fff;
-      }
-
-      nav canvas {
-        height: 100px;
-        width: 200px;
-        margin: auto;
-        display: block;
       }
     </style>
   </head>
   <body>
     <!-- <div id="fps"></div> -->
     <!-- <p><a href="https://js13kgames.com/">JS13K 2024</a> code: <a href="https://viljamipeltola.com/">Viljami</a>, graphics Marja Siira</p> -->
-    <canvas id="app"></canvas>
+    <div><canvas id="app"></canvas></div>
     <img id="sheet" src="assets/spritesheet_v1.gif" style="display: none;"/>
-
-    <nav>
-      <button id="foodButton"><canvas id="food"></canvas></button>
-      <button>B</button>
-      <button>C</button>
-    </nav>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
