--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
         z-index: 9;
         position: fixed;
         bottom: 0;
-        left: 0;
+        right: 0;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        margin: 0;
+        font-size: 10px;
       }
 
       p, a {
@@ -43,7 +46,7 @@
   <body>
     <!-- <div id="fps"></div> -->
     <div><canvas id="app"></canvas></div>
-    <p><a href="https://js13kgames.com/">JS13K 2024</a>, design <a href="https://marjasiira.kuvat.fi/kuvat/">Marja</a> & code <a href="https://viljamipeltola.com/">Viljami</a></p>
+    <p><a href="https://js13kgames.com/">JS13K 2024</a>, <a href="https://marjasiira.kuvat.fi/kuvat/">Marja</a> & <a href="https://viljamipeltola.com/">Viljami</a></p>
     <img id="sheet" src="assets/spritesheet_v2.gif" style="display: none;"/>
     <script type="module" src="/src/main.ts"></script>
   </body>
