Draw with ints; Adjust to latest spritesheet; cleanup

--- a/index.html
+++ b/index.html
@@ -34,13 +34,14 @@
         margin: 0;
         font-size: 10px;
       }
-      p, a {color: #fff}
+      p,a{color:#fff}
+      img{display:none}
     </style>
   </head>
   <body>
-    <div><canvas id="app"></canvas></div>
+    <div><canvas></canvas></div>
     <p>For <a href="https://js13kgames.com/">js13k</a>: <a href="https://marjasiira.kuvat.fi/kuvat/">Marja</a> & <a href="https://viljamipeltola.com/">Viljami</a></p>
-    <img id="sheet" src="assets/spritesheet_v2.gif" style="display: none;"/>
+    <img src="assets/spritesheet_v4.gif"/>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
